# midenc-hir-type

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile.toml  README.md  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: alignable.rs  array_type.rs  enum_type.rs  layout.rs  lib.rs  pointer_type.rs  serialization.rs  struct_type.rs
src/function_type/: abi.rs  mod.rs
